--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -2,3 +2,21 @@
     color: #8DDCA4;
     cursor: pointer;
 }
+
+.shakingAnimation {
+    animation: 3s shaking infinite;
+}
+
+@keyframes shaking {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
